Finalizando o tablet view

--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
 <body>
     <header></header>
     <section id="apresentacao">
-        <img src="src/assets/img/psicologa-loira-bg-gr-azul.png"
-            alt="Psicóloga loira segurando um caderno e uma caneta">
-        <div class="container_apresentacao">
-            <h1 class="apresentacao__titulo">Serei a sua <span>psicóloga</span> pessoal</h1>
-            <h2 class="apresentacao__subtitulo"><span>O cuidado que você precisa</span> para o seu bem estar</h2>
-            <p class="apresentacao__texto">Todos nós enfrentamos desafios e momentos difíceis ao longo da vida. Procurar
-                um psicólogo não é sinal de fraqueza, mas de coragem e cuidado consigo mesmo.</p>
-            <a href="" class="btn__agenda btn-apresentacao">Agende sua sessão</a>
-            <div class="btn__video">
-                <svg width="54" height="54" viewBox="0 0 54 54" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M45 17.6V15.4382C45.0002 15.2493 44.9632 15.0621 44.891 14.8875C44.8188 14.7129 44.7129 14.5543 44.5793 14.4207C44.4457 14.2871 44.2871 14.1812 44.1125 14.109C43.9379 14.0368 43.7507 13.9998 43.5618 14H10.4418C10.2527 13.9998 10.0654 14.0368 9.8906 14.1089C9.7158 14.1811 9.55692 14.2869 9.42304 14.4205C9.28916 14.554 9.18289 14.7127 9.1103 14.8873C9.03772 15.0619 9.00024 15.2491 9 15.4382V17.6H12.6V21.2H9V24.8H12.6V28.4H9V32H12.6V35.6H9V37.7582C8.99976 37.9476 9.0369 38.1352 9.10927 38.3102C9.18164 38.4853 9.28784 38.6443 9.42177 38.7782C9.5557 38.9122 9.71473 39.0184 9.88977 39.0907C10.0648 39.1631 10.2524 39.2002 10.4418 39.2H43.5618C43.7509 39.1998 43.9381 39.1623 44.1127 39.0897C44.2873 39.0171 44.446 38.9108 44.5795 38.777C44.7131 38.6431 44.8189 38.4842 44.8911 38.3094C44.9632 38.1346 45.0002 37.9473 45 37.7582V35.6H41.4V32H45V28.4H41.4V24.8H45V21.2H41.4V17.6H45ZM23.4 32V21.2L32.4 26.6L23.4 32Z"
-                        fill="#8F8F8F" />
-                    <circle cx="27" cy="27" r="26.5" stroke="#7F7F7F" />
-                </svg>
-                <p>Me assista</p>
+        <div class="apresentacao_pad_mar">
+            <img src="src/assets/img/psicologa-loira-bg-gr-azul.png"
+                alt="Psicóloga loira segurando um caderno e uma caneta">
+            <div class="container_apresentacao">
+                <h1 class="apresentacao__titulo">Serei a sua <span>psicóloga</span> pessoal</h1>
+                <h2 class="apresentacao__subtitulo"><span>O cuidado que você precisa</span> para o seu bem estar</h2>
+                <p class="apresentacao__texto">Todos nós enfrentamos desafios e momentos difíceis ao longo da vida. Procurar
+                    um psicólogo não é sinal de fraqueza, mas de coragem e cuidado consigo mesmo.</p>
+                <a href="" class="btn__agenda btn-apresentacao">Agende sua sessão</a>
+                <div class="btn__video">
+                    <svg width="54" height="54" viewBox="0 0 54 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M45 17.6V15.4382C45.0002 15.2493 44.9632 15.0621 44.891 14.8875C44.8188 14.7129 44.7129 14.5543 44.5793 14.4207C44.4457 14.2871 44.2871 14.1812 44.1125 14.109C43.9379 14.0368 43.7507 13.9998 43.5618 14H10.4418C10.2527 13.9998 10.0654 14.0368 9.8906 14.1089C9.7158 14.1811 9.55692 14.2869 9.42304 14.4205C9.28916 14.554 9.18289 14.7127 9.1103 14.8873C9.03772 15.0619 9.00024 15.2491 9 15.4382V17.6H12.6V21.2H9V24.8H12.6V28.4H9V32H12.6V35.6H9V37.7582C8.99976 37.9476 9.0369 38.1352 9.10927 38.3102C9.18164 38.4853 9.28784 38.6443 9.42177 38.7782C9.5557 38.9122 9.71473 39.0184 9.88977 39.0907C10.0648 39.1631 10.2524 39.2002 10.4418 39.2H43.5618C43.7509 39.1998 43.9381 39.1623 44.1127 39.0897C44.2873 39.0171 44.446 38.9108 44.5795 38.777C44.7131 38.6431 44.8189 38.4842 44.8911 38.3094C44.9632 38.1346 45.0002 37.9473 45 37.7582V35.6H41.4V32H45V28.4H41.4V24.8H45V21.2H41.4V17.6H45ZM23.4 32V21.2L32.4 26.6L23.4 32Z"
+                            fill="#8F8F8F" />
+                        <circle cx="27" cy="27" r="26.5" stroke="#7F7F7F" />
+                    </svg>
+                    <p>Me assista</p>
+                </div>
             </div>
         </div>
     </section>
@@ -93,9 +95,9 @@
                     </div>
                 </div>
                 <div class="container_grid__img">
-                    <img class="priImg" src="src/assets/img/terapia-vista-de-cima.png" alt="">
-                    <img class="segImg" src="src/assets/img/terapia-identificando.png" alt="">
-                    <img class="treImg" src="src/assets/img/terapia-diagnostico.png" alt="">
+                    <img class=" pSessaoImg priImg" src="src/assets/img/terapia-vista-de-cima.png" alt="">
+                    <img class=" pSessaoImg segImg" src="src/assets/img/terapia-identificando.png" alt="">
+                    <img class=" pSessaoImg treImg" src="src/assets/img/terapia-diagnostico.png" alt="">
                 </div>
             </div>
         </section>
@@ -147,37 +149,39 @@
         <section id="atendimento">
             <h2>Local de atendimento</h2>
             <p>Atendimento online ou presencial</p>
-            <div class="referencias_atendimento">
-                <div class="whatsapp">
-                    <a href="tel:(47)99999-9999">
-                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="ref-local_flex">
+                <div class="referencias_atendimento">
+                    <div class="whatsapp">
+                        <a href="tel:(47)99999-9999">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M17 2.91006C16.0832 1.98399 14.9912 1.24973 13.7876 0.750111C12.5841 0.250494 11.2931 -0.00448012 9.99 5.95696e-05C4.53 5.95696e-05 0.0800002 4.45006 0.0800002 9.91006C0.0800002 11.6601 0.54 13.3601 1.4 14.8601L0 20.0001L5.25 18.6201C6.7 19.4101 8.33 19.8301 9.99 19.8301C15.45 19.8301 19.9 15.3801 19.9 9.92006C19.9 7.27006 18.87 4.78006 17 2.91006ZM9.99 18.1501C8.51 18.1501 7.06 17.7501 5.79 17.0001L5.49 16.8201L2.37 17.6401L3.2 14.6001L3 14.2901C2.17775 12.977 1.74114 11.4593 1.74 9.91006C1.74 5.37006 5.44 1.67006 9.98 1.67006C12.18 1.67006 14.25 2.53006 15.8 4.09006C16.5675 4.85402 17.1757 5.76272 17.5894 6.76348C18.0031 7.76425 18.214 8.83717 18.21 9.92006C18.23 14.4601 14.53 18.1501 9.99 18.1501ZM14.51 11.9901C14.26 11.8701 13.04 11.2701 12.82 11.1801C12.59 11.1001 12.43 11.0601 12.26 11.3001C12.09 11.5501 11.62 12.1101 11.48 12.2701C11.34 12.4401 11.19 12.4601 10.94 12.3301C10.69 12.2101 9.89 11.9401 8.95 11.1001C8.21 10.4401 7.72 9.63006 7.57 9.38006C7.43 9.13006 7.55 9.00006 7.68 8.87006C7.79 8.76006 7.93 8.58006 8.05 8.44006C8.17 8.30006 8.22 8.19006 8.3 8.03006C8.38 7.86006 8.34 7.72006 8.28 7.60006C8.22 7.48006 7.72 6.26006 7.52 5.76006C7.32 5.28006 7.11 5.34006 6.96 5.33006H6.48C6.31 5.33006 6.05 5.39006 5.82 5.64006C5.6 5.89006 4.96 6.49006 4.96 7.71006C4.96 8.93006 5.85 10.1101 5.97 10.2701C6.09 10.4401 7.72 12.9401 10.2 14.0101C10.79 14.2701 11.25 14.4201 11.61 14.5301C12.2 14.7201 12.74 14.6901 13.17 14.6301C13.65 14.5601 14.64 14.0301 14.84 13.4501C15.05 12.8701 15.05 12.3801 14.98 12.2701C14.91 12.1601 14.76 12.1101 14.51 11.9901Z"
+                                    fill="#FF7C1D" />
+                            </svg>
+                            <p>(47)99999-9999</p>
+                        </a>
+                    </div>
+                    <div class="email">
+                        <a href="mailto:psico.figma@gmail.com">
+                            <svg width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M26 0H2C1.46957 0 0.960859 0.210714 0.585786 0.585786C0.210714 0.960859 0 1.46957 0 2V18C0 18.5304 0.210714 19.0391 0.585786 19.4142C0.960859 19.7893 1.46957 20 2 20H26C26.5304 20 27.0391 19.7893 27.4142 19.4142C27.7893 19.0391 28 18.5304 28 18V2C28 1.46957 27.7893 0.960859 27.4142 0.585786C27.0391 0.210714 26.5304 0 26 0ZM23.8 2L14 8.78L4.2 2H23.8ZM2 18V2.91L13.43 10.82C13.5974 10.9361 13.7963 10.9984 14 10.9984C14.2037 10.9984 14.4026 10.9361 14.57 10.82L26 2.91V18H2Z"
+                                    fill="#FF7C1D" />
+                            </svg>
+                            <p>psico.figma@gmail.com</p>
+                        </a>
+                    </div>
+                    <div class="endereco">
+                        <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
-                                d="M17 2.91006C16.0832 1.98399 14.9912 1.24973 13.7876 0.750111C12.5841 0.250494 11.2931 -0.00448012 9.99 5.95696e-05C4.53 5.95696e-05 0.0800002 4.45006 0.0800002 9.91006C0.0800002 11.6601 0.54 13.3601 1.4 14.8601L0 20.0001L5.25 18.6201C6.7 19.4101 8.33 19.8301 9.99 19.8301C15.45 19.8301 19.9 15.3801 19.9 9.92006C19.9 7.27006 18.87 4.78006 17 2.91006ZM9.99 18.1501C8.51 18.1501 7.06 17.7501 5.79 17.0001L5.49 16.8201L2.37 17.6401L3.2 14.6001L3 14.2901C2.17775 12.977 1.74114 11.4593 1.74 9.91006C1.74 5.37006 5.44 1.67006 9.98 1.67006C12.18 1.67006 14.25 2.53006 15.8 4.09006C16.5675 4.85402 17.1757 5.76272 17.5894 6.76348C18.0031 7.76425 18.214 8.83717 18.21 9.92006C18.23 14.4601 14.53 18.1501 9.99 18.1501ZM14.51 11.9901C14.26 11.8701 13.04 11.2701 12.82 11.1801C12.59 11.1001 12.43 11.0601 12.26 11.3001C12.09 11.5501 11.62 12.1101 11.48 12.2701C11.34 12.4401 11.19 12.4601 10.94 12.3301C10.69 12.2101 9.89 11.9401 8.95 11.1001C8.21 10.4401 7.72 9.63006 7.57 9.38006C7.43 9.13006 7.55 9.00006 7.68 8.87006C7.79 8.76006 7.93 8.58006 8.05 8.44006C8.17 8.30006 8.22 8.19006 8.3 8.03006C8.38 7.86006 8.34 7.72006 8.28 7.60006C8.22 7.48006 7.72 6.26006 7.52 5.76006C7.32 5.28006 7.11 5.34006 6.96 5.33006H6.48C6.31 5.33006 6.05 5.39006 5.82 5.64006C5.6 5.89006 4.96 6.49006 4.96 7.71006C4.96 8.93006 5.85 10.1101 5.97 10.2701C6.09 10.4401 7.72 12.9401 10.2 14.0101C10.79 14.2701 11.25 14.4201 11.61 14.5301C12.2 14.7201 12.74 14.6901 13.17 14.6301C13.65 14.5601 14.64 14.0301 14.84 13.4501C15.05 12.8701 15.05 12.3801 14.98 12.2701C14.91 12.1601 14.76 12.1101 14.51 11.9901Z"
+                                d="M19.5114 8.82109L11.1781 0.487769C10.8656 0.175445 10.4418 0 10 0C9.55816 0 9.13441 0.175445 8.82188 0.487769L0.488551 8.82109C0.333035 8.97546 0.209759 9.15919 0.125889 9.36163C0.0420193 9.56406 -0.000769433 9.78114 1.04724e-05 10.0003V20.0002C1.04724e-05 20.2213 0.0878079 20.4332 0.244088 20.5895C0.400368 20.7458 0.612329 20.8336 0.833343 20.8336H7.5C7.72102 20.8336 7.93298 20.7458 8.08926 20.5895C8.24554 20.4332 8.33333 20.2213 8.33333 20.0002V14.1669H11.6667V20.0002C11.6667 20.2213 11.7545 20.4332 11.9107 20.5895C12.067 20.7458 12.279 20.8336 12.5 20.8336H19.1667C19.3877 20.8336 19.5996 20.7458 19.7559 20.5895C19.9122 20.4332 20 20.2213 20 20.0002V10.0003C20.0008 9.78114 19.958 9.56406 19.8741 9.36163C19.7902 9.15919 19.667 8.97546 19.5114 8.82109ZM18.3333 19.1669H13.3333V13.3336C13.3333 13.1126 13.2455 12.9006 13.0893 12.7443C12.933 12.5881 12.721 12.5003 12.5 12.5003H7.5C7.27899 12.5003 7.06703 12.5881 6.91075 12.7443C6.75447 12.9006 6.66667 13.1126 6.66667 13.3336V19.1669H1.66668V10.0003L10 1.66693L18.3333 10.0003V19.1669Z"
                                 fill="#FF7C1D" />
                         </svg>
-                        <p>(47)99999-9999</p>
-                    </a>
+                        <p>Rua 2945, Av. dos Principes n°940 - Itapema do Norte, Itapoá SC</p>
+                    </div>
                 </div>
-                <div class="email">
-                    <a href="mailto:psico.figma@gmail.com">
-                        <svg width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M26 0H2C1.46957 0 0.960859 0.210714 0.585786 0.585786C0.210714 0.960859 0 1.46957 0 2V18C0 18.5304 0.210714 19.0391 0.585786 19.4142C0.960859 19.7893 1.46957 20 2 20H26C26.5304 20 27.0391 19.7893 27.4142 19.4142C27.7893 19.0391 28 18.5304 28 18V2C28 1.46957 27.7893 0.960859 27.4142 0.585786C27.0391 0.210714 26.5304 0 26 0ZM23.8 2L14 8.78L4.2 2H23.8ZM2 18V2.91L13.43 10.82C13.5974 10.9361 13.7963 10.9984 14 10.9984C14.2037 10.9984 14.4026 10.9361 14.57 10.82L26 2.91V18H2Z"
-                                fill="#FF7C1D" />
-                        </svg>
-                        <p>psico.figma@gmail.com</p>
-                    </a>
-                </div>
-                <div class="endereco">
-                    <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M19.5114 8.82109L11.1781 0.487769C10.8656 0.175445 10.4418 0 10 0C9.55816 0 9.13441 0.175445 8.82188 0.487769L0.488551 8.82109C0.333035 8.97546 0.209759 9.15919 0.125889 9.36163C0.0420193 9.56406 -0.000769433 9.78114 1.04724e-05 10.0003V20.0002C1.04724e-05 20.2213 0.0878079 20.4332 0.244088 20.5895C0.400368 20.7458 0.612329 20.8336 0.833343 20.8336H7.5C7.72102 20.8336 7.93298 20.7458 8.08926 20.5895C8.24554 20.4332 8.33333 20.2213 8.33333 20.0002V14.1669H11.6667V20.0002C11.6667 20.2213 11.7545 20.4332 11.9107 20.5895C12.067 20.7458 12.279 20.8336 12.5 20.8336H19.1667C19.3877 20.8336 19.5996 20.7458 19.7559 20.5895C19.9122 20.4332 20 20.2213 20 20.0002V10.0003C20.0008 9.78114 19.958 9.56406 19.8741 9.36163C19.7902 9.15919 19.667 8.97546 19.5114 8.82109ZM18.3333 19.1669H13.3333V13.3336C13.3333 13.1126 13.2455 12.9006 13.0893 12.7443C12.933 12.5881 12.721 12.5003 12.5 12.5003H7.5C7.27899 12.5003 7.06703 12.5881 6.91075 12.7443C6.75447 12.9006 6.66667 13.1126 6.66667 13.3336V19.1669H1.66668V10.0003L10 1.66693L18.3333 10.0003V19.1669Z"
-                            fill="#FF7C1D" />
-                    </svg>
-                    <p>Rua 2945, Av. dos Principes n°940 - Itapema do Norte, Itapoá SC</p>
-                </div>
+                <img src="src/assets/img/local-atendimento.png" alt="">
             </div>
-            <img src="src/assets/img/local-atendimento.png" alt="">
             <a href="" class="btn__agenda btn-local">Agende sua sessão</a>
         </section>
     </main>
