--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <a href="#primeiraSessao">Primeira vez?</a>
-            <a href="#beneficios">beneficios</a>
+            <a href="#beneficios">Beneficios</a>
             <a href="#atendimento">Local</a>
         </nav>
     </header>
